<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="15dip"
	android:background="@color/fondo">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_gravity="center">
		
		<TextView style="@style/Header" android:layout_width="fill_parent"  
			android:layout_height="wrap_content" android:text="@string/hello" />
			
		<Button 
		    android:background="@drawable/logo"	
		    android:layout_height="wrap_content"
			android:layout_width="wrap_content"  			
			android:layout_gravity="center"
			android:id="@+id/logo"></Button>	
			
			
		<TextView android:text="@string/login" android:layout_width="fill_parent"
			android:layout_height="wrap_content" style="@style/Text" />
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/txtUsuario">
			<requestFocus></requestFocus>
		</EditText>

		<TextView android:text="@string/password"  style="@style/Text"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/txtPassword"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:inputType="textPassword">

		</EditText>
		<Button android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/btnLogin"
			android:text="@string/btnLogin" />
		
		<TextView android:layout_width="fill_parent" android:layout_marginTop="10dip"
			android:layout_height="wrap_content" android:text="@string/copyright" />
	</LinearLayout>
	
</LinearLayout>	